Fixed header markers alignment
When changing the default font size, the header markers were not aligned with the title.

--- a/ursine-umbra.scss
+++ b/ursine-umbra.scss
@@ -336,7 +336,7 @@ td, th {
       float: none;
       padding: 0;
       vertical-align: baseline;
-      line-height: 20px;
+      line-height: 1.6rem;
     }
   }
 
